Add permalink format Pretty for Posts and Pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,12 +11,12 @@
             <h1>Awesome Pizza</h1>
             <nav>
                 <ul class="nav">
-                    <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
-                    <li><a href="{{ site.baseurl }}/menu.html">Menu</a></li>
-                    <li><a href="{{ site.baseurl }}/location.html">Location</a></li>
-                    <li><a href="{{ site.baseurl }}/about.html">About</a></li>
-                    <li><a href="{{ site.baseurl }}/contact.html">Contact</a></li>
-                    <li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
+                    <li><a href="{{ site.baseurl }}/">Home</a></li>
+                    <li><a href="{{ site.baseurl }}/menu">Menu</a></li>
+                    <li><a href="{{ site.baseurl }}/location">Location</a></li>
+                    <li><a href="{{ site.baseurl }}/about">About</a></li>
+                    <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+                    <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
                 </ul>
             </nav>
         </header>
